Visibility Fix
This fix is assuming you want to keep the xLarge classes.

I updated the @media call variables to clear up some of the confusion.

--- a/scss/foundation/_foundation-global.scss
+++ b/scss/foundation/_foundation-global.scss
@@ -223,6 +223,6 @@ $small-screen: emCalc(768px) !default;
 $medium-screen: emCalc(1280px) !default;
 $large-screen: emCalc(1440px) !default;
 
-$small: "only screen and (min-width:"#{$small-screen}")" !default;
-$medium: "only screen and (min-width:"#{$medium-screen}")" !default;
-$large: "only screen and (min-width:"#{$large-screen}")" !default;
+$medium: "only screen and (min-width:"#{$small-screen}")" !default;
+$large: "only screen and (min-width:"#{$medium-screen}")" !default;
+$xLarge: "only screen and (min-width:"#{$large-screen}")" !default;
