--- a/scss/foundation/components/_visibility.scss
+++ b/scss/foundation/components/_visibility.scss
@@ -26,7 +26,7 @@
 }
 
 /* Medium Displays: 768px - 1279px */
-@media #{$small} {
+@media #{$medium} {
   .show-for-medium,
   .show-for-medium-down,
   .show-for-medium-up,
@@ -34,11 +34,13 @@
 
   .show-for-small,
   .show-for-large,
-  .show-for-large-up { display: none !important; }
+  .show-for-large-up,
+  .show-for-xlarge { display: none !important; }
 
   .hide-for-small,
   .hide-for-large,
-  .hide-for-large-up { display: inherit !important; }
+  .hide-for-large-up,
+  .hide-for-xlarge { display: inherit !important; }
 
   .hide-for-medium,
   .hide-for-medium-down,
@@ -47,20 +49,22 @@
 }
 
 /* Large Displays: 1280px - 1440px */
-@media #{$medium} {
-  .show-for-medium-down,
+@media #{$large} {
   .show-for-medium-up,
   .show-for-large,
   .show-for-large-down,
   .show-for-large-up { display: inherit !important; }
 
   .show-for-small,
-  .show-for-medium { display: none !important; }
+  .show-for-medium,
+  .show-for-medium-down,
+  .show-for-xlarge { display: none !important; }
 
   .hide-for-small,
-  .hide-for-medium { display: inherit !important; }
-
+  .hide-for-medium,
   .hide-for-medium-down,
+  .hide-for-xlarge { display: inherit !important; }
+
   .hide-for-medium-up,
   .hide-for-large,
   .hide-for-large-down,
@@ -69,24 +73,26 @@
 }
 
 /* X-Large Displays: 1400px and up */
-@media #{$large} {
-  .show-for-medium-down,
+@media #{$xLarge} {
   .show-for-medium-up,
-  .show-for-large-down,
-  .show-for-large-up { display: inherit !important; }
+  .show-for-large-up,
+  .show-for-xlarge { display: inherit !important; }
 
   .show-for-small,
   .show-for-medium,
-  .show-for-large { display: none !important; }
+  .show-for-medium-down,
+  .show-for-large
+  .show-for-large-down, { display: none !important; }
 
   .hide-for-small,
   .hide-for-medium,
-  .hide-for-large { display: inherit !important; }
-
   .hide-for-medium-down,
+  .hide-for-large,
+  .hide-for-large-down { display: inherit !important; }
+  
   .hide-for-medium-up,
-  .hide-for-large-down,
-  .hide-for-large-up { display: none !important; }
+  .hide-for-large-up,
+  .hide-for-xlarge { display: none !important; }
 }
 
 
